--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ ul {
     position: absolute;
     height: 120vh;
     width: 100%;
-    background-image: url(./Assets/excavation-construction-works.jpg);
+    background-image: url(./Assets/Entrance.jpeg);
     filter: brightness(40%);
     background-size: cover;
     background-position: top;
@@ -388,7 +388,7 @@ ul {
 }
 
 .contactButton {
-    background-image: url(./Assets/close-up-details-of-industrial-backhoe-loader.jpg);
+    background-image: url(./Assets/sideViewEvening.jpeg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -2156,7 +2156,7 @@ footer {
         position: absolute;
         height: 70vh;
         width: 100%;
-        background-image: url(./Assets/excavation-construction-works.jpg);
+        background-image: url(./Assets/Entrance.jpeg);
         filter: brightness(40%);
         background-size: cover;
         background-position: left;
@@ -2167,7 +2167,7 @@ footer {
     .heading {
         margin-left: 5vw;
         width: 80vw;
-        height: 34vh;
+        height: 45vh;
     }
     
     .heading p{
@@ -2178,7 +2178,7 @@ footer {
         width: 100%;
         color: white;
         text-transform: uppercase;
-        padding-top: 100px;
+        padding-top: 250px;
         height: 100px;
     }
     
@@ -2191,6 +2191,7 @@ footer {
     }
     
     .catchPhrase {
+        display: none;
         color: orangered;
         margin-left: 5vw;
         margin-top: -20px;
@@ -2206,7 +2207,7 @@ footer {
     .background {
         height: 100vh;
         background-attachment: fixed;
-        background-image: url(/Assets/Roof.jpg);
+        background-image: url(/Assets/dark-abstract-backgrounds-01.jpg);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -2286,7 +2287,7 @@ footer {
     
     .contactButton {
         order: 2;
-        background-image: url(./Assets/close-up-details-of-industrial-backhoe-loader.jpg);
+        background-image: url(./Assets/sideViewEvening.jpeg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -3426,7 +3427,6 @@ footer {
         width: 80%;
         margin-left: auto;
         margin-right: auto;
-        /* background-color: black; */
         padding-top: 3%;
         align-items: center;
         align-content: center;
@@ -3448,7 +3448,6 @@ footer {
         width: 75%;
         margin-left: auto;
         margin-right: auto;
-        /* background-color: black; */
         align-items: center;
         align-content: center;
         flex-direction: column;
@@ -3458,7 +3457,6 @@ footer {
         height: 32vh;
         width: 100%;
         text-align: center;
-        /* border-right: 1px solid white; */
     }
 
     .contactBodyColumn h5{
@@ -3477,7 +3475,6 @@ footer {
         color: white;
         width: 100%;
         height: 20px;
-        /* align-content: center; */
         padding-top: 5px;
     }
 
@@ -3494,7 +3491,6 @@ footer {
     }
 
     .number p{
-        /* margin-left: 20px; */
         height: 20px;
         margin-top: -3px;
         font-size: 14px;
@@ -3511,7 +3507,6 @@ footer {
         color: white;
         width: 100%;
         height: 20px;
-        /* align-content: center; */
         padding-top: 5px;
     }
 
@@ -3529,7 +3524,6 @@ footer {
     }
 
     .email p{
-        /* margin-left: 20px; */
         height: 20px;
         margin-top: -3px;
         font-size: 14px;
@@ -3546,7 +3540,6 @@ footer {
         color: white;
         width: 100%;
         height: 20px;
-        /* align-content: center; */
         padding-top: 5px;
     }
 
@@ -3580,7 +3573,6 @@ footer {
         color: white;
         width: 100%;
         height: 20px;
-        /* align-content: center; */
         padding-top: 5px;
     }
 
@@ -3597,7 +3589,6 @@ footer {
     }
 
     .nuumber p{
-        /* margin-left: 20px; */
         height: 20px;
         margin-top: -3px;
         font-size: 14px;
@@ -3688,7 +3679,6 @@ footer {
         width: 100%;
         margin-left: auto;
         margin-right: auto;
-        /* background-color: white; */
     }
 
     .copyright {
@@ -4101,7 +4091,7 @@ footer {
         position: absolute;
         height: 95vh;
         width: 100%;
-        background-image: url(./Assets/excavation-construction-works.jpg);
+        background-image: url(./Assets/Entrance.jpeg);
         filter: brightness(40%);
         background-size: cover;
         background-position: center center;
@@ -4223,7 +4213,7 @@ footer {
     }
 
     .contactButton {
-        background-image: url(./Assets/close-up-details-of-industrial-backhoe-loader.jpg);
+        background-image: url(./Assets/sideViewEvening.jpeg);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
