--- a/style.css
+++ b/style.css
@@ -1484,7 +1484,7 @@ ul {
 
 .contactHeaderRow {
     height: 20vh;
-    width: 80%;
+    width: 60%;
     margin-left: auto;
     margin-right: auto;
     padding-top: 3%;
@@ -1497,9 +1497,9 @@ ul {
     font-size: 43px;
     color: white;
     text-transform: uppercase;
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .contactBodyRow {
