--- a/About Page/style.css
+++ b/About Page/style.css
@@ -1204,9 +1204,9 @@ footer {
     transition: color 0.5s ease-in-out 0.1s;
 }
 
-
-
-@media (min-width: 10px) and (max-width: 767px) {
+    
+/* Styles for screens smaller than 768px (typical mobile screens) */
+@media only screen and (max-width: 767px)and (orientation:portrait){
     * {
         margin: 0;
         overflow-x: hidden;
