--- a/Our Properties/style.css
+++ b/Our Properties/style.css
@@ -1425,8 +1425,9 @@ footer {
 }
 
 
-
-@media (min-width: 10px) and (max-width: 767px) {
+    
+/* Styles for screens smaller than 768px (typical mobile screens) */
+@media only screen and (max-width: 767px)and (orientation:portrait) {
     * {
         margin: 0;
         overflow-x: hidden;
