--- a/style.css
+++ b/style.css
@@ -1869,9 +1869,9 @@ footer {
     transition: color 0.5s ease-in-out 0.1s;
 }
 
-
-
-@media (min-width: 10px) and (max-width: 767px) {
+    
+/* Styles for screens smaller than 768px (typical mobile screens) */
+@media only screen and (max-width: 767px)and (orientation:portrait) {
     * {
         margin: 0;
         overflow-x: hidden;
@@ -3805,7 +3805,7 @@ footer {
 }
 
 
-@media (min-width: 767px) and (max-width: 1024px) {
+@media (min-width: 767px) and (max-width: 1199px) {
     * {
         margin: 0;
         overflow-x: hidden;
