--- a/style.css
+++ b/style.css
@@ -2064,6 +2064,7 @@ footer {
     }
     
     .logo {
+        margin-top: 20px;
         margin-left: 5vw;
         width: 50%;
         align-content: center;
@@ -2125,6 +2126,7 @@ footer {
     }
 
     .hamburger {
+        margin-top: 20px;
         display: block;
         margin-left: 28vw;
     }
